--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,11 @@
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
+    - if current_instructor
+      = link_to 'Sign Out', destroy_instructor_session_path, method: :delete
+    - else
+      = link_to 'Sign Up', new_instructor_path
+      = link_to 'Sign In', '#'
     = yield
     = flash.notice
     = flash.alert
