--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,7 +10,7 @@
       = link_to 'Sign Out', destroy_instructor_session_path, method: :delete
     - else
       = link_to 'Sign Up', new_instructor_path
-      = link_to 'Sign In', '#'
+      = link_to 'Sign In', new_instructor_session_path
     = yield
     = flash.notice
     = flash.alert
