Student sign up/sign in/sign out implemented

--- a/app/views/static_pages/home.haml
+++ b/app/views/static_pages/home.haml
@@ -2,4 +2,4 @@
 %h2 Home
 - unless current_instructor
   = link_to 'Instructor', static_pages_instructor_path
-  = link_to 'Student', '#'
+  = link_to 'Student', static_pages_student_path
