--- a/app/views/static_pages/instructor.haml
+++ b/app/views/static_pages/instructor.haml
@@ -5,3 +5,6 @@
 - else
   = link_to 'Sign Up', new_instructor_registration_path
   = link_to 'Sign In', new_instructor_session_path
+
+- if current_instructor
+  %h2= current_instructor.name
