--- a/app/views/static_pages/student.haml
+++ b/app/views/static_pages/student.haml
@@ -5,3 +5,6 @@
 - else
   = link_to 'Sign Up', new_student_registration_path
   = link_to 'Sign In', new_student_session_path
+
+- if current_student
+  %h2= current_student.name
