--- a/app/views/courses/index.haml
+++ b/app/views/courses/index.haml
@@ -2,4 +2,4 @@
 %ul
 - @courses.each do |course|
   %li= course.title
-  = button_to 'add'
+  = button_to 'add', { :controller => "enrollments", :action => "create", :course_id => course.id, :student_id => current_student.id }
