Students can sign up for courses

--- a/app/views/static_pages/student.haml
+++ b/app/views/static_pages/student.haml
@@ -9,4 +9,6 @@
 - if current_student
   %h2= current_student.name
   %h3 Courses
+  - @student_enrollments.each do |enrollment|
+    = enrollment.course.title
   = link_to 'add a course', courses_path
