--- a/app/views/static_pages/instructor.haml
+++ b/app/views/static_pages/instructor.haml
@@ -10,5 +10,5 @@
   %h2= current_instructor.name
   %h3 Courses
   - @instructor_courses.each do |course|
-    = course.title
+    = link_to course.title, course_path(course)
   = link_to 'create a new course', new_course_path
