Students can enter daily code, Attendance table

--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -7,4 +7,4 @@
 
 - if current_student
   %h2= @course.title
-  = link_to "Enter Today's Code", "#"
+  = link_to "Enter Today's Code", new_course_attendance_path(@course)
