Instructors can see list of meetings on course page

--- a/app/views/courses/show.haml
+++ b/app/views/courses/show.haml
@@ -4,6 +4,9 @@
   %h3 Students
   - @course_enrollments.each do |enrollment|
     = enrollment.student.name
+  %h3 Meetings
+  - @course_meetings.each do |meeting|
+    = meeting.created_at
 
 - if current_student
   %h2= @course.title
