--- a/app/views/static_pages/home.haml
+++ b/app/views/static_pages/home.haml
@@ -1,5 +1,3 @@
-
-%h2 Home
-- unless current_instructor
-  = link_to 'Instructor', static_pages_instructor_path
-  = link_to 'Student', static_pages_student_path
+%h2 Bueller
+= link_to 'Instructor', static_pages_instructor_path
+= link_to 'Student', static_pages_student_path
