--- a/app/views/static_pages/instructor.haml
+++ b/app/views/static_pages/instructor.haml
@@ -1,11 +1,5 @@
+= render "layouts/instructor_nav"
 %h2 Instructor
-
-- if current_instructor
-  = link_to 'Sign Out', destroy_instructor_session_path, method: :delete
-- else
-  = link_to 'Sign Up', new_instructor_registration_path
-  = link_to 'Sign In', new_instructor_session_path
-
 - if current_instructor
   %h2= current_instructor.name
   %h3 Courses
