--- a/app/views/static_pages/student.haml
+++ b/app/views/static_pages/student.haml
@@ -1,11 +1,5 @@
+= render "layouts/student_nav"
 %h2 Student
-
-- if current_student
-  = link_to 'Sign Out', destroy_student_session_path, method: :delete
-- else
-  = link_to 'Sign Up', new_student_registration_path
-  = link_to 'Sign In', new_student_session_path
-
 - if current_student
   %h2= current_student.name
   %h3 Courses
