--- a/app/views/layouts/_instructor_nav.haml
+++ b/app/views/layouts/_instructor_nav.haml
@@ -1,6 +1,11 @@
-- if current_instructor
-  = link_to 'Sign Out', destroy_instructor_session_path, method: :delete
-  = link_to 'Home', static_pages_instructor_path
-- else
-  = link_to 'Sign Up', new_instructor_registration_path
-  = link_to 'Sign In', new_instructor_session_path
+%nav.top-bar
+  %section.top-bar-section
+    %ul.right
+      - if current_instructor
+        %li= link_to 'Sign Out', destroy_instructor_session_path, method: :delete
+        %li.divider
+        %li= link_to 'Home', static_pages_instructor_path
+      - else
+        %li= link_to 'Sign Up', new_instructor_registration_path
+        %li.divider
+        %li= link_to 'Sign In', new_instructor_session_path
