--- a/app/views/layouts/_student_nav.haml
+++ b/app/views/layouts/_student_nav.haml
@@ -1,6 +1,11 @@
-- if current_student
-  = link_to 'Sign Out', destroy_student_session_path, method: :delete
-  = link_to 'Home', static_pages_student_path
-- else
-  = link_to 'Sign Up', new_student_registration_path
-  = link_to 'Sign In', new_student_session_path
+%nav.top-bar
+  %section.top-bar-section
+    %ul.right
+      - if current_student
+        %li= link_to 'Sign Out', destroy_student_session_path, method: :delete
+        %li.divider
+        %li= link_to 'Home', static_pages_student_path
+      - else
+        %li= link_to 'Sign Up', new_student_registration_path
+        %li.divider
+        %li= link_to 'Sign In', new_student_session_path
