--- a/app/views/static_pages/student.haml
+++ b/app/views/static_pages/student.haml
@@ -1,8 +1,10 @@
 = render "layouts/student_nav"
-%h2 Student
-- if current_student
-  %h2= current_student.name
-  %h3 Courses
-  - @student_enrollments.each do |enrollment|
-    = link_to enrollment.course.title, course_path(enrollment.course)
-  = link_to 'add a course', courses_path
+.row
+  .small-12.columns
+  - if current_student
+    %h3= current_student.name
+    %h4 Courses
+    %ul
+    - @student_enrollments.each do |enrollment|
+      %li= link_to enrollment.course.title, course_path(enrollment.course)
+    = link_to 'add a course', courses_path
