--- a/app/views/layouts/_student_nav.haml
+++ b/app/views/layouts/_student_nav.haml
@@ -1,6 +1,8 @@
 %nav.top-bar
   %section.top-bar-section
     %ul.right
+      %li= link_to 'Student', '#'
+      %li.divider
       - if current_student
         %li= link_to 'Sign Out', destroy_student_session_path, method: :delete
         %li.divider
