Moved javascript into haml for heroku

--- a/app/views/meetings/create.haml
+++ b/app/views/meetings/create.haml
@@ -1,3 +1,9 @@
 %h2 Date
 %h3= @code
-= javascript_include_tag "create_meeting"
+
+:javascript
+  setTimeout('delayedRedirect()', 30000);
+
+  function delayedRedirect(){
+    window.location.href = document.referrer;
+  }
