--- a/app/views/meetings/show.haml
+++ b/app/views/meetings/show.haml
@@ -1,4 +1,6 @@
-%h2= @meeting.created_at
-%h3 Students
-- @meeting_attendances.each do |attendance|
-  = attendance.student.name
+.row
+  .small-12.columns
+    %h2= @meeting.created_at
+    %h3 Students
+    - @meeting_attendances.each do |attendance|
+      = attendance.student.name
