--- a/app/views/meetings/create.haml
+++ b/app/views/meetings/create.haml
@@ -1,5 +1,7 @@
-%h2 Date
-%h3= @code
+.row
+  .small-12.columns
+    %h2 Date
+    %h3= @code
 
 :javascript
   setTimeout('delayedRedirect()', 30000);
