--- a/app/views/static_pages/home.haml
+++ b/app/views/static_pages/home.haml
@@ -1,3 +1,5 @@
-%h2 Bueller
-= link_to 'Instructor', static_pages_instructor_path
-= link_to 'Student', static_pages_student_path
+.row
+  .small-12.columns
+    %h2 Bueller
+    = link_to 'Instructor', static_pages_instructor_path
+    = link_to 'Student', static_pages_student_path
