--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1208,3 +1208,9 @@ $alert-close-padding: 0;
   min-height: 40px;
   max-height: 40px;
 }
+
+ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
