--- a/app/views/courses/index.haml
+++ b/app/views/courses/index.haml
@@ -1,8 +1,10 @@
+= render "layouts/student_nav"
 = render "layouts/flash"
 .row
   .small-12.columns
     %h2 Courses
     %ul
-    - @courses.each do |course|
-      %li= course.title
-      = link_to 'add', course_enrollments_path(course), method: :post
+      - @courses.each do |course|
+        %li
+          = course.title
+          = link_to 'add', course_enrollments_path(course), method: :post
