--- a/app/views/static_pages/home.haml
+++ b/app/views/static_pages/home.haml
@@ -1,6 +1,6 @@
 = render "layouts/flash"
 .row
   .small-12.columns
-    %h2 Bueller
+    %h2.red Bueller
     = link_to 'Instructor', static_pages_instructor_path
     = link_to 'Student', static_pages_student_path
