--- a/app/views/layouts/_student_nav.haml
+++ b/app/views/layouts/_student_nav.haml
@@ -1,4 +1,9 @@
 %nav.top-bar
+  %ul.title-area
+    %li
+      .name
+        %h1#title
+          = link_to "Bueller", static_pages_student_path
   %section.top-bar-section
     %ul.right
       %li= link_to 'Student', '#'
