--- a/app/views/attendances/new.haml
+++ b/app/views/attendances/new.haml
@@ -2,7 +2,7 @@
 = render "layouts/flash"
 .row
   .small-12.columns
-    %h2 Date
+    %h2= Date.today.strftime('%a %d %b %Y')
     = form_for @attendance do |f|
       = f.label :code
       = f.text_field :code
