--- a/app/views/meetings/create.haml
+++ b/app/views/meetings/create.haml
@@ -1,7 +1,7 @@
 = render "layouts/flash"
 .row
   .small-12.columns
-    %h2 Date
+    %h2= Date.today.strftime('%a %d %b %Y')
     %h3= @code
 
 :javascript
