--- a/app/views/attendances/new.haml
+++ b/app/views/attendances/new.haml
@@ -6,4 +6,4 @@
     = form_for @attendance do |f|
       = f.label :code
       = f.text_field :code
-      = f.submit "Enter"
+      = f.submit "Enter", class: 'button tiny radius'
