--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -20,5 +20,5 @@
         = f.label :password_confirmation
         %br/
         = f.password_field :password_confirmation
-      %div= f.submit "Sign up"
+      %div= f.submit "Sign up", class: 'button tiny radius'
     = render "devise/shared/links"
