--- a/app/views/courses/new.haml
+++ b/app/views/courses/new.haml
@@ -6,4 +6,4 @@
     = form_for @course do |f|
       = f.label :title
       = f.text_field :title
-      = f.submit "Save"
+      = f.submit "Save", class: 'button tiny radius'
