Fixed meeting show page, students were not in list

--- a/app/views/meetings/show.haml
+++ b/app/views/meetings/show.haml
@@ -4,5 +4,6 @@
   .small-12.columns
     %h2= @meeting.created_at.strftime('%a %d %b %Y')
     %h4 Students
-    - @meeting_attendances.each do |attendance|
-      = attendance.student.name
+    %ul
+      - @meeting_attendances.each do |attendance|
+        %li= attendance.student.name
